feat(java-lsp): make annotation-processed javac semantics authoritative
Run diagnostics and editor queries through a persistent project-JDK
javac worker using the build's exact processor path and options.

Remove Lombok-specific diagnostic suppression, preserve the native fast
path for processor-free units, and add end-to-end coverage for generated
accessors, builders, logging fields, navigation, and unsaved overlays.